@@ -162,6 +162,10 @@ class Config(object):
         self._cfg.set('add', 's_title', 'True')
         self._cfg.set('add', 's_trailer', 'True')
         self._cfg.set('add', 's_year', 'True')
+        self._cfg.set('add', 's_screenplay', 'True')
+        self._cfg.set('add', 's_cameraman', 'True')
+        self._cfg.set('add', 's_resolution', 'True')
+        self._cfg.set('add', 's_barcode', 'True')
         self._cfg.set('database', 'file', 'griffith.db')
         self._cfg.set('database', 'host', 'localhost')
         self._cfg.set('database', 'name', 'griffith')
