@@ -212,6 +212,10 @@ def define_widgets(self, gladefile):
         's_trailer'         : get('p_s_trailer'),
         's_cast'            : get('p_s_cast'),
         's_year'            : get('p_s_year'),
+        's_screenplay'      : get('p_s_screenplay'),
+        's_cameraman'       : get('p_s_cameraman'),
+        's_resolution'      : get('p_s_resolution'),
+        's_barcode'         : get('p_s_barcode'),
         's_limit'           : get('p_sp_s_limit'),
         'vcodec'            : get('p_vcodec'),
         'view_image'        : get('view_image'),
